--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 
 # But this files...
 !.gitignore
-!.config/qtile*
+!.config/
+!.config/qtile/
+!.config/qtile/*
 
 # ...even if they are in subdirectories
 */
