--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -22,6 +22,10 @@
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
+  #
+  #
+import:
+  - ~/.config/alacritty/themes/themes/tomorrow_night_bright.yaml
 
 window:
   # Window dimensions (changes require restart)
@@ -120,8 +124,6 @@ window:
 
   # Scrolling distance multiplier.
   #multiplier: 3
-import:
-  - ~/.config/alacritty/themes/themes/base16_default_dark.yaml
 
 # Font configuration
 font:
@@ -133,7 +135,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: BlexMono Nerd Font
+    family: Geist Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
