--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,13 @@
-font_family       GeistMono Nerd Font
+#font_family       GeistMono Nerd Font
+font_family       ComicShannsMono Nerd Font
 bold_font         auto
 italic_font       auto
 bold_italic_font  auto
 
-font_size 11.0
+font_size 12.0
 
 window_margin_width 8
+background_opacity 0.9
 
 confirm_os_window_close 0 
 enable_audio_bell no
