--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,15 +5,21 @@ set -g mouse on
 
 # Set prefix
 unbind %
-bind h split-window -h # Split panes horizontal
+bind v split-window -h
 unbind '"'
-bind v split-window -v # Split panes vertically
+bind h split-window -v
 
-# Install plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @catppuccin_window_left_separator '█'
+set -g @catppuccin_window_middle_separator '█'
+set -g @catppuccin_window_right_separator '█'
+set -g @catppuccin_status_left_separator '█'
+set -g @catppuccin_status_left_separator '█'
+set -g @catppuccin_status_right_separator '█'
+
+set -g @plugin 'catppuccin/tmux'
+
+run '~/.config/tmux/plugins/tpm/tpm'
