great tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,17 +9,40 @@ bind v split-window -h
 unbind '"'
 bind h split-window -v
 
+# resize panes using Alt + hjkl without prefix
+bind -n M-h resize-pane -L 5
+bind -n M-j resize-pane -D 5
+bind -n M-k resize-pane -U 5
+bind -n M-l resize-pane -R 5
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @catppuccin_window_left_separator '█'
-set -g @catppuccin_window_middle_separator '█'
-set -g @catppuccin_window_right_separator '█'
-set -g @catppuccin_status_left_separator '█'
-set -g @catppuccin_status_left_separator '█'
-set -g @catppuccin_status_right_separator '█'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
-set -g @plugin 'catppuccin/tmux'
+set -g pane-border-style "fg=black"
+set -g pane-active-border-style "fg=#cc2850"
+set -g status-style "bg=default fg=#080808"
+set -g status-left-style "bg=yellow fg=#080808"
+set -g status-right-style "bg=green fg=#080808"
+
+# These are the default values used inside the plugin to acheive the preview shown above.
+set -g @minimal-tmux-bg "blue"
+set -g @minimal-tmux-justify "centre"
+# set -g @minimal-tmux-indicator-str ""
+set -g @minimal-tmux-indicator false
+set -g @minimal-tmux-status "bottom"
+
+# Enables or disables the left and right status bar
+set -g @minimal-tmux-right true
+set -g @minimal-tmux-left true
+
+#on all tabs (default is false)
+# false will make it visible for the current tab only
+set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
+
+# Not recommended to change these values
+set -g @minimal-tmux-status-left "  #S "
+set -g @minimal-tmux-status-right "  tmux "
 
 run '~/.config/tmux/plugins/tpm/tpm'
