--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,7 +42,7 @@ set -g @minimal-tmux-left true
 set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
 
 # Not recommended to change these values
-set -g @minimal-tmux-status-left "  #S "
+set -g @minimal-tmux-status-left " 󰍹 #S "
 set -g @minimal-tmux-status-right "  tmux "
 
 run '~/.config/tmux/plugins/tpm/tpm'
