--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,13 +3,16 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 # Enable mouse support
 set -g mouse on
 
-# Set prefix
+# Set the prefix to C-Space
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
 unbind %
 bind v split-window -h
 unbind '"'
 bind h split-window -v
 
-# resize panes using Alt + hjkl without prefix
 bind -n M-h resize-pane -L 5
 bind -n M-j resize-pane -D 5
 bind -n M-k resize-pane -U 5
