--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -65,7 +65,7 @@ daemon = false
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 backend = "glx"
 dithered-present = false;
-vsync = true;
+vsync = false;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
@@ -81,11 +81,12 @@ xrender-sync-fence = true
 transparent-clipping-exclude = []
 
 log-level = "warn";
+
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 1; }
+    tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+    dock = { shadow = false; clip-shadow-above = true; }
+    dnd = { opacity = 1; shadow = false; fade = false; focus = false; }
+    popup_menu = { opacity = 1; shadow = false;}
+    dropdown_menu = { opacity = 1; }
 };
