--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -1,4 +1,3 @@
-# Execute your favorite apps at launch
-exec-once = waybar 
 exec-once = hyprpaper
-exec-once = otd-daemon
+exec-once = waybar
+exec-once = pypr
