--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,7 +1,10 @@
-preload ~/Pictures/wallpapers/top.png
-preload ~/Pictures/wallpapers/topL.png
+$path = ~/dotfiles/wallpapers/leaf.jpg
+preload = $path
+wallpaper = DP-1,$path
+wallpaper = DP-2,$path
+wallpaper = DP-3,$path
+#enable splash text rendering over the wallpaper
+splash = false
+#fully disable ipc
+# ipc = off
 
-#set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = monitor1,~/Pictures/wallpapers/top.png
-wallpaper = monitor2,~/Pictures/wallpapers/top.png
-wallpaper = monitor3,~/Pictures/wallpapers/top.png
