--- a/config/hypr/displays.conf
+++ b/config/hypr/displays.conf
@@ -1,6 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #       name, WxH@Hz, position, scale
 monitor=, preferred, auto, auto
+# comment this out if your displays dont match this
 monitor=DP-1, 1920x1080@390, 1080x420, 1
 monitor=DP-2, 1920x1080@60, 3000x420, 1
 monitor=DP-3, 1920x1080@60, 0x0, 1,transform,1
