--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,44 +1,9 @@
-# Env variables
-env = WLR_NO_HARDWARE_CURSORS,1
-env = XCURSOR_SIZE,24
-env = WLR_DRM_NO_ATOMIC,1
-
-# Set programs that you use
-$terminal = kitty
-$fileManager = thunar
-$menu = rofi -show drun -show-icons
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-general {
-    allow_tearing = true
-}
 
-input {
-    # Keyboard
-    kb_layout = us,es
-    kb_options = grp:win_space_toggle
-    
-    repeat_rate = 25
-    repeat_delay = 600
-
-    # Mouse
-    sensitivity = 0.4 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = flat
-
-    follow_mouse = 2
-}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-
-# Import other files
-source = ~/.config/hypr/screens.conf
-source = ~/.config/hypr/kbinds.conf
-source = ~/.config/hypr/style.conf
+source = ~/.config/hypr/variables.conf
+source = ~/.config/hypr/displays.conf
 source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/theme.conf
+source = ~/.config/hypr/devices.conf
+source = ~/.config/hypr/settings.conf
