--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -40,15 +40,15 @@
 		"interval": 60,
 		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
 	},
-	"network": {
-		"format-wifi": "  {essid}",
-		"format-ethernet": "  Connected",
-		"format-disconnected": " Disconnected",
-		"tooltip-format-wifi": " {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\n⬆️ {bandwidthUpBits} ⬇️ {bandwidthDownBits}",
-		"tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}\n⬆️ {bandwidthUpBits} ⬇️ {bandwidthDownBits}",
-		"format-linked": "{ifname} (No IP) ",
-		"on-click-right": "nmtui"
-	},
+	// "network": {
+	// 	"format-wifi": "  {essid}",
+	// 	"format-ethernet": "  Connected",
+	// 	"format-disconnected": " Disconnected",
+	// 	"tooltip-format-wifi": " {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\n⬆️ {bandwidthUpBits} ⬇️ {bandwidthDownBits}",
+	// 	"tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}\n⬆️ {bandwidthUpBits} ⬇️ {bandwidthDownBits}",
+	// 	"format-linked": "{ifname} (No IP) ",
+	// 	"on-click-right": "nmtui"
+	// },
 	"pulseaudio": {
 		"format": "{icon} {volume}%",
 		"format-bluetooth": "{volume}%  {format_source}",
