tmux configs + nvim

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -18,26 +18,29 @@ bind -n M-j resize-pane -D 5
 bind -n M-k resize-pane -U 5
 bind -n M-l resize-pane -R 5
 
+# bind Ctrl + F to run a script
+bind-key -r f run-shell "tmux neww ~/dotfiles/scripts/tmux-sessionizer.sh"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set -g pane-border-style "fg=black"
-set -g pane-active-border-style "fg=#cc2850"
-set -g status-style "bg=default fg=#080808"
-set -g status-left-style "bg=yellow fg=#080808"
-set -g status-right-style "bg=green fg=#080808"
+set -g pane-active-border-style "fg=red"
+set -g status-style "bg=black fg=#080808"
+set -g status-left-style "bg=green fg=#080808"
+set -g status-right-style "bg=red fg=#080808"
 
 # These are the default values used inside the plugin to acheive the preview shown above.
 set -g @minimal-tmux-bg "blue"
-set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-justify "left"
 # set -g @minimal-tmux-indicator-str ""
 set -g @minimal-tmux-indicator false
-set -g @minimal-tmux-status "bottom"
+set -g @minimal-tmux-status "top"
 
 # Enables or disables the left and right status bar
-set -g @minimal-tmux-right true
+set -g @minimal-tmux-right false
 set -g @minimal-tmux-left true
 
 #on all tabs (default is false)
@@ -45,7 +48,8 @@ set -g @minimal-tmux-left true
 set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
 
 # Not recommended to change these values
-set -g @minimal-tmux-status-left " 󰍹 #S "
-set -g @minimal-tmux-status-right "  tmux "
+set -g @minimal-tmux-status-left "  #S "
+# clock on the right
+set -g @minimal-tmux-status-right " %R %d %b %Y "
 
 run '~/.config/tmux/plugins/tpm/tpm'
