--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-decoration-layout=appmenu:none
 gtk-theme-name=Colloid-Dark-Compact
 gtk-icon-theme-name=Colloid-dark
-gtk-font-name=Cantarell 11
-gtk-cursor-theme-size=0
+gtk-font-name=MartianMono Nerd Font Medium 10
+gtk-cursor-theme-name=Bibata-Modern-Classic
+gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
@@ -12,5 +12,7 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
-gtk-cursor-theme-name=Bibata-Modern-Classic
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=1
+gtk-decoration-layout=appmenu:none
