--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -14,7 +14,7 @@ $modc = SUPER_CTRL
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, W, killactive, 
-bind = $mods, Q, exit, 
+bind = $mods, Q, exec, wlogout 
 bind = $mod, E, exec, $fileManager
 bind = $mod, T, togglefloating, 
 bind = $mod, R, exec, $menu
