--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -6,6 +6,10 @@
 # t -> transparent, cannot be shadowed by other binds.
 # i -> ignore mods, will ignore modifiers.
 
+$terminal = alacritty
+$fileManager = pcmanfm
+$menu = rofi -show drun
+$screenshot = grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png
 
 $mod = SUPER
 $mods = SUPER_SHIFT
@@ -27,9 +31,8 @@ bind = $mods, S, exec, $screenshot
 
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
-# bind = $mod, B, exec, pypr toggle btop
-# bind = $mod, P, exec, pypr toggle password
-# bind = $mod, M, exec, pypr toggle music
+bind = $mod, P, exec, pypr toggle password
+bind = $mod, M, exec, pypr toggle music
 
 # Move focus with mod + vim motions
 binde = $mod, h, movefocus, l
