--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,9 +1,24 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-source = ~/.config/hypr/variables.conf
+env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+
 source = ~/.config/hypr/displays.conf
-source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/theme.conf
 source = ~/.config/hypr/devices.conf
-source = ~/.config/hypr/settings.conf
+
+layerrule = noanim, rofi
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = pseudotile, class:osu!.exe
+
+exec-once = waypaper --restore
+exec-once = waybar
+exec-once = pypr
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = otd-daemon
