--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -8,6 +8,8 @@ env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
+
+
 source = ~/.config/hypr/displays.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/theme.conf
@@ -15,10 +17,24 @@ source = ~/.config/hypr/devices.conf
 
 layerrule = noanim, rofi
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = pseudotile, class:osu!.exe
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$indowrulev2 = pseudotile, class:osu!.exe
+
+misc {
+    disable_hyprland_logo=true
+    disable_splash_rendering=true
+    animate_manual_resizes=true
+}
 
 exec-once = waypaper --restore
 exec-once = waybar
 exec-once = pypr
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = otd-daemon
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
