--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -47,8 +47,7 @@
         }
     },
     "custom/arch": {
-        "format": "",
-        "on-click": "wlogout"
+        "format": ""
     },
     "custom/search": {
         "format": "",
