--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -17,6 +17,9 @@ style.shape = "Block"
 style.blinking = "Always"
 vi_mode_style.shape = "Block"
 
+[mouse]
+hide_when_typing = true
+
 [colors]
 draw_bold_text_with_bright_colors = true
 
