--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ misc {
     disable_hyprland_logo=true
     disable_splash_rendering=true
     animate_manual_resizes=true
+    no_direct_scanout=false
 }
 
 exec-once = waypaper --restore
