--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -8,7 +8,7 @@
 
 $terminal = alacritty
 $fileManager = pcmanfm
-$menu = rofi -show drun
+$menu = wofi -a
 $screenshot = grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png
 
 $mod = SUPER
