--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -2,7 +2,6 @@
 # r -> release, will trigger on release of a key.
 # e -> repeat, will repeat when held.
 # n -> non-consuming, key/mouse events will be passed to the active window in addition to triggering the dispatcher.
-# m -> mouse, see below
 # t -> transparent, cannot be shadowed by other binds.
 # i -> ignore mods, will ignore modifiers.
 
@@ -35,23 +34,23 @@ bind = $mod, P, exec, pypr toggle password
 bind = $mod, M, exec, pypr toggle music
 
 # Move focus with mod + vim motions
-binde = $mod, h, movefocus, l
-binde = $mod, j, movefocus, d
-binde = $mod, k, movefocus, u
-binde = $mod, l, movefocus, r
+bind = $mod, h, movefocus, l
+bind = $mod, j, movefocus, d
+bind = $mod, k, movefocus, u
+bind = $mod, l, movefocus, r
 
 # Move windows with mod + SHIFT + vim motions
-binde = $mods, h, movewindow, l
-binde = $mods, j, movewindow, d
-binde = $mods, k, movewindow, u
-binde = $mods, l, movewindow, r
+bind = $mods, h, movewindow, l
+bind = $mods, j, movewindow, d
+bind = $mods, k, movewindow, u
+bind = $mods, l, movewindow, r
 
 # Resize windows with mod + CTRL + vim motions
 $resize_step = 40
-binde = $modc, h, resizeactive, -$resize_step 0
-binde = $modc, j, resizeactive, 0 $resize_step
-binde = $modc, k, resizeactive, 0 -$resize_step
-binde = $modc, l, resizeactive, $resize_step 0
+bind = $modc, h, resizeactive, -$resize_step 0
+bind = $modc, j, resizeactive, 0 $resize_step
+bind = $modc, k, resizeactive, 0 -$resize_step
+bind = $modc, l, resizeactive, $resize_step 0
 
 # Switch workspaces with mod + [0-9]
 bind = $mod, 1, workspace, 1
@@ -71,5 +70,5 @@ bind = $mods, 5, movetoworkspace, 5
 bind = $mods, 6, movetoworkspace, 6
 
 # Move/resize windows with mod + LMB/RMB and dragging
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
+bind = $mod, mouse:272, movewindow
+bind = $mod, mouse:273, resizewindow
