--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -10,9 +10,10 @@ $fileManager = pcmanfm
 $menu = wofi -a
 $screenshot = grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png
 
-$mod = SUPER
+$mod  = SUPER
 $mods = SUPER_SHIFT
 $modc = SUPER_CTRL
+$moda = SUPER_ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mod, RETURN, exec, $terminal
@@ -40,17 +41,17 @@ bind = $mod, k, movefocus, u
 bind = $mod, l, movefocus, r
 
 # Move windows with mod + SHIFT + vim motions
-bind = $mods, h, movewindow, l
-bind = $mods, j, movewindow, d
-bind = $mods, k, movewindow, u
-bind = $mods, l, movewindow, r
+binde = $mods, h, movewindow, l
+binde = $mods, j, movewindow, d
+binde = $mods, k, movewindow, u
+binde = $mods, l, movewindow, r
 
 # Resize windows with mod + CTRL + vim motions
 $resize_step = 40
-bind = $modc, h, resizeactive, -$resize_step 0
-bind = $modc, j, resizeactive, 0 $resize_step
-bind = $modc, k, resizeactive, 0 -$resize_step
-bind = $modc, l, resizeactive, $resize_step 0
+binde = $modc, h, resizeactive, -$resize_step 0
+binde = $modc, j, resizeactive, 0 $resize_step
+binde = $modc, k, resizeactive, 0 -$resize_step
+binde = $modc, l, resizeactive, $resize_step 0
 
 # Switch workspaces with mod + [0-9]
 bind = $mod, 1, workspace, 1
@@ -70,5 +71,5 @@ bind = $mods, 5, movetoworkspace, 5
 bind = $mods, 6, movetoworkspace, 6
 
 # Move/resize windows with mod + LMB/RMB and dragging
-bind = $mod, mouse:272, movewindow
-bind = $mod, mouse:273, resizewindow
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
