--- a/config/hypr/theme.conf
+++ b/config/hypr/theme.conf
@@ -1,54 +1,51 @@
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 2
+    gaps_out = 4
     border_size = 2
-    # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
-    col.active_border = rgba(cd1f48ff)
+    col.active_border = rgba(ff0f7bff) rgba(f89b29ff) 45deg
+    #col.active_border = rgba(cd1f48ff)
     col.inactive_border = rgba(323437ff)
     layout = dwindle
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 10
+    rounding = 5
     blur {
         enabled = true
         size = 4
         passes = 1
     }
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 4
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba(1e1e1eee)
 }
 
+# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 animations {
     enabled = yes
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    # animation = border, 1, 10, default
-    # animation = borderangle, 1, 8, default
-    # animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # bezier = custom, 0.45, 0.05, 0.55, 0.95
+    animation = windows,    1, 1.5, default
+    animation = fade,       1, 1.5, default
+    animation = workspaces, 1, 1.5, default
 }
 
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = yes
+    preserve_split = yes
 }
 
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0
 }
