--- a/config/wofi/config
+++ b/config/wofi/config
@@ -1,6 +1,6 @@
 hide_scroll=true
 show=drun
-width=30%
+width=400
 lines=8
 line_wrap=word
 term=alacritty
@@ -12,8 +12,8 @@ layer=overlay
 allow_images=true
 gtk_dark=true
 prompt=
-image_size=20
+image_size=26
 display_generic=false
 location=center
 key_expand=Tab
-insensitive=false
+insensitive=true
