--- a/config/hypr/hyprland/theme.conf
+++ b/config/hypr/hyprland/theme.conf
@@ -19,13 +19,13 @@ general {
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
-    rounding = 4
+    rounding = 8
     blur {
         enabled = true
         size = 4
         passes = 1
     }
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 8
     shadow_render_power = 4
     col.shadow = rgba(1e1e1e44)
@@ -53,9 +53,4 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_is_master = true
-}
-
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
-misc {
-    force_default_wallpaper = 0
 }
