--- a/config/hypr/pyprland.toml
+++ b/config/hypr/pyprland.toml
@@ -14,7 +14,7 @@ unfocus = "hide"
 
 [scratchpads.music]
 animation = "fromTop"
-command = "env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify --uri=%U"
+command = """flatpak run --command=sh com.spotify.Client -c 'eval "$(sed s#LD_PRELOAD=#LD_PRELOAD=$HOME/.spotify-adblock/spotify-adblock.so:#g /app/bin/spotify)"'"""
 class = "Spotify"
 process_tracking = false
 lazy = true
