--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,57 +1,9 @@
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# env = WLR_DRM_NO_ATOMIC,1
-# env = SDL_VIDEODRIVER,wayland
-env = MOZ_ENABLE_WAYLAND,1
-env = _JAVA_AWT_WM_NONREPARENTING,1
-
-# env = NVD_BACKEND,direct
-env = MOZ_DISABLE_RDD_SANDBOX,1
-
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
-
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
-
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-env = HYPRCURSOR_SIZE,24
+source = ~/.config/hypr/hyprland/envoirment.conf
 
 source = ~/.config/hypr/hyprland/displays.conf
 source = ~/.config/hypr/hyprland/keybinds.conf
 source = ~/.config/hypr/hyprland/theme.conf
 source = ~/.config/hypr/hyprland/devices.conf
 
-#layerrule    = noanim, wofi
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrule   = forceinput,^(wofi)$
-
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(osu!.exe)$
-windowrulev2 = pseudo,class:^(osu!.exe)$
-windowrulev2 = noblur,class:^(osu!.exe)$
-
-misc {
-    disable_hyprland_logo=true
-    disable_splash_rendering=true
-    animate_manual_resizes=true
-    no_direct_scanout=false
-}
-
-exec-once = hyprpaper
-# exec-once = waypaper --restore
-exec-once = /home/m4rti/dotfiles/scripts/hypr_autostart.sh
-exec-once = waybar
-exec-once = pypr
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = otd-daemon
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+source = ~/.config/hypr/hyprland/rules.conf
+source = ~/.config/hypr/hyprland/autostart.conf
