--- a/config/hypr/hyprland/devices.conf
+++ b/config/hypr/hyprland/devices.conf
@@ -1,30 +1,38 @@
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
+    # keyboard
     kb_layout = us,es
     kb_options = grp:win_space_toggle
     kb_variant =
     kb_model =
     kb_rules =
+    repeat_delay = 200
+    repeat_rate = 40
 
-    follow_mouse = 2 # on click
-    # follow_mouse = 1 # on hover
+    # mouse
+    follow_mouse = 2 # 0: dont | 1: hover | 2: click | 3: keyboard
+    mouse_refocus = false
+    accel_profile = flat
+    natural_scroll = false
 
     touchpad {
-        natural_scroll = no
+        disable_while_typing = true
+        natural_scroll = false
+        tap-to-click = true
     }
 
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 
-    # tablet {
-    #     output = DP-1
-    #     region_position = 1, 1
-    #     region_size = 1, 1
-    #     relative_input = false
-    #     left_handed = false
-    #     active_area_size = 216, 121.5
-    #     #active_area_position = 108, 60.75
-    # }
-
+    tablet {
+        transform = 0
+        output = DP-1
+        region_position = 1, 1
+        region_size = 1, 1
+        relative_input = false
+        left_handed = false
+        active_area_size = 216, 121.5
+        active_area_position = 108, 60.75
+    }
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
