--- a/config/hypr/hyprland/displays.conf
+++ b/config/hypr/hyprland/displays.conf
@@ -1,7 +1,19 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-#       name, WxH@Hz, position, scale
-monitor=, preferred, auto, auto
-# comment this out if your displays dont match this
-monitor=DP-1, 1920x1080@390, 1080x420, 1
-monitor=DP-2, 1920x1080@60, 3000x420, 1
-monitor=DP-3, 1920x1080@60, 0x0, 1,transform,1
+
+#           n, rules
+workspace = 1, monitor:DP-1,     default:true
+workspace = 2, monitor:DP-2,     default:true
+workspace = 3, monitor:DP-3,     default:true
+workspace = 6, monitor:HDMI-A-1, default:true
+
+
+#       name,     WxH@Hz,        position, scale
+monitor = DP-1,     1920x1080@390, 1080x420, 1
+monitor = DP-2,     1920x1080@60,  3000x420, 1
+monitor = DP-3,     1920x1080@60,  0x0,      1, transform, 1
+monitor = HDMI-A-1, 1920x1080@60,  4920x420, 1
+
+monitor = ,     preferred,     auto,     auto
+
+exec-once = hyprctl dispatch movefocus l
+exec-once = hyprctl dispatch movefocus l
