--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -5,7 +5,7 @@
 # t -> transparent, cannot be shadowed by other binds.
 # i -> ignore mods, will ignore modifiers.
 
-$terminal = kitty 
+$terminal = alacritty
 $fileManager = pcmanfm
 $menu = wofi -a
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
@@ -15,10 +15,15 @@ $mods = SUPER_SHIFT
 $modc = SUPER_CTRL
 $moda = SUPER_ALT
 
+$night_on  = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 3000
+$night_off = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 5000
+$dimm_on   = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 0.5
+$dimm_off  = busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $modc, Q, exit
 bind = $mod,  RETURN, exec, $terminal
 bind = $mod,  W, killactive, 
-bind = $mods, M, exit
 bind = $mod,  E, exec, $fileManager
 bind = $mod,  T, togglefloating, 
 bind = $mod,  R, exec, $menu
@@ -28,6 +33,10 @@ bind = $mod,  Tab, fullscreen, 1
 bind = $modc, R, exec, killall waybar
 bind = $mods, R, exec, waybar
 bind = $mods, S, exec, $screenshot
+bind = $mod,  B, exec, $dimm_on
+bind = $mods, B, exec, $dimm_off
+bind = $mod,  N, exec, $night_on
+bind = $mods, N, exec, $night_off
 
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
