--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -7,9 +7,11 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = rounding 0,class:^(osu!.exe)$
 windowrulev2 = noanim,class:^(osu!.exe)$
 windowrulev2 = pseudo,class:^(osu!.exe)$
 windowrulev2 = noblur,class:^(osu!.exe)$
+windowrulev2 = opaque,class:^(osu!.exe)$
 
 
 xwayland {
@@ -23,7 +25,7 @@ misc {
     disable_splash_rendering=true
     animate_manual_resizes=true
     no_direct_scanout=false
-    vfr = true
+    vfr = false
 }
 
 opengl {
