--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,9 +1,10 @@
 $img = ~/dotfiles/wallpapers/leaf.jpg
 preload = $img
 
-wallpaper = DP-1,$img
-wallpaper = DP-2,$img
-wallpaper = DP-3,$img
+wallpaper = DP-1,     $img
+wallpaper = DP-2,     $img
+wallpaper = DP-3,     $img
+wallpaper = HDMI-A-1, $img
 
 splash = false
 ipc = on
