--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 #font_family       GeistMono Nerd Font
 font_family       SF Mono Medium
-bold_font         SF Mono SemiBold
+bold_font         SF Mono Bold
 italic_font       auto
 bold_italic_font  auto
 
