--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Colloid-Dark
 gtk-icon-theme-name=Colloid-dark
-gtk-font-name=SF Pro Text 11
+gtk-font-name=SF Pro 11
 gtk-cursor-theme-name=Bibata-Modern-Classic
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
