--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -22,7 +22,8 @@ env = XDG_SESSION_TYPE,wayland
 
 # Qt
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;x11
+env = QT_QPA_PLATFORM,xcb;wayland;x11
+# env = QT_QPA_PLATFORM,xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 # Nvidia
@@ -37,6 +38,6 @@ env = WLR_DRM_NO_ATOMIC,1
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = ECORE_EVAS_ENGINE,wayland_egl
 env = ELM_ENGINE,wayland_egl
-env = MOZ_ENABLE_WAYLAND,1
-env = MOZ_DISABLE_RDD_SANDBOX,1
+# env = MOZ_ENABLE_WAYLAND,1
+# env = MOZ_DISABLE_RDD_SANDBOX,1
 env = SAL_USE_VCLPLUGIN,qt5
