--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -38,6 +38,9 @@ bind = $mods, B, exec, $dimm_off
 bind = $mod,  N, exec, $night_on
 bind = $mods, N, exec, $night_off
 
+bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, bringactivetotop,
+
 # pyprland
 bind = $mod, V, exec, pypr toggle volume
 bind = $mod, P, exec, pypr toggle password
