--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -22,13 +22,13 @@ env = XDG_SESSION_TYPE,wayland
 
 # Qt
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,xcb;wayland;x11
+env = QT_QPA_PLATFORM,wayland;x11
 # env = QT_QPA_PLATFORM,xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 # Nvidia
-env = __GL_GSYNC_ALLOWED,0
-env = __GL_VRR_ALLOWED,0
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = LIBVA_DRIVER_NAME,nvidia
