--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -6,7 +6,7 @@
 # i -> ignore mods, will ignore modifiers.
 
 $terminal = alacritty
-$fileManager = pcmanfm
+$fileManager = $terminal -e joshuto
 $menu = wofi -a
 $screenshot = IMG=~/Pictures/screenshots/screenshot_"$(date '+%Y-%m-%d-%H%M%S')".png && grim -g "$(slurp -d)" $IMG && wl-copy < $IMG
 
@@ -75,7 +75,6 @@ bind = $mod, 6, workspace, 6
 bind = $mod, 7, workspace, 7
 bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
-
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
 bind = $mods, 1, movetoworkspace, 1
